fix block-switcher overflow issues

--- a/packages/block-editor/src/components/block-switcher/style.scss
+++ b/packages/block-editor/src/components/block-switcher/style.scss
@@ -23,6 +23,7 @@
 // When the block switcher does not have any transformations, we show it but as disabled.
 // The background and opacity change helps make the icon legible, despite being disabled.
 .components-button.block-editor-block-switcher__no-switcher-icon:disabled {
+	background: $light-gray-200;
 	border-radius: 0;
 	opacity: 0.84;
 
@@ -31,7 +32,6 @@
 	// and should be overridden when disabled.
 	.block-editor-block-icon.has-colors {
 		color: $dark-gray-500 !important;
-		background: $light-gray-200 !important;
 	}
 }
 
@@ -88,26 +88,41 @@
 		@include formatting-button-style__focus();
 	}
 }
-
+// we double the max-width for it to fit both the preview & content
+// but we keep the min width the same for the border to work.
 .components-popover:not(.is-mobile).block-editor-block-switcher__popover .components-popover__content {
 	min-width: 300px;
-	max-width: 340px;
+	max-width: calc(340px * 2);
+	max-height: 500px;
+	display: flex;
+	// we need to differ those styles to popover__container so we reset them here
+	box-shadow: none;
+	background: none;
 }
 
 .block-editor-block-switcher__popover .components-popover__content {
 	@include break-medium {
 		position: relative;
 
-		.block-editor-block-preview {
-			border: $border-width solid $light-gray-500;
+		.components-popover__container {
 			box-shadow: $shadow-popover;
 			background: $white;
-			position: absolute;
-			left: 100%;
-			top: -1px;
-			bottom: -1px;
+			min-width: 300px;
+			max-width: 340px;
+			width: 50%;
+		}
+
+		.block-editor-block-preview {
+			border-left: $border-width solid $light-gray-500;
+			box-shadow: $shadow-popover;
+			background: $white;
 			width: 300px;
 			height: auto;
+			// sticky helps us keep the preview at the top when scrolling
+			position: sticky;
+			align-self: stretch;
+			// for sticky to work we need top
+			top: 0;
 		}
 	}
 
@@ -123,11 +138,6 @@
 	.components-panel__body + .components-panel__body {
 		border-top: $border-width solid $light-gray-500;
 	}
-}
-
-.block-editor-block-switcher__popover:not(.is-mobile) > .components-popover__content {
-	// Reset overflow to allow showing the preview on the left once an item is hovered.
-	overflow-y: visible;
 }
 
 .block-editor-block-switcher__popover .block-editor-block-styles {
